tests/parsing/cmc/errors/134.expected
File "tests/parsing/cmc/errors/134.cmc", line 1, character 34-40:
1 | (check-system system :query (q (r :query)))
                                      ^^^^^^
Error while parsing a query definition, read the reserved word ':query',
      but expected a reachability variable name or closing parenthesis.
